Spacing Fix

--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ textarea {
 
    .cismodel-logo img{
         width:200px;
-        margin:0 auto;
+        margin:0 auto 20px auto;
         display:block;
    }
 
@@ -218,21 +218,21 @@ textarea {
 
 
 .cismodel-item.step-1 {
-        top:85px;
+        top:105px;
         left:50%;
         margin-left: -90px;
         -webkit-animation-delay: .24s;
     }
 
     .cismodel-item.step-2 {
-        top:115px;
+        top:135px;
         left:50%;
         margin-left: -85px;
         -webkit-animation-delay: .4s;
     }
 
     .cismodel-item.step-3 {
-        top:145px;
+        top:165px;
         left:50%;
         margin-left: -80px;
         -webkit-animation-delay: .6s;
